--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "install": "^0.13.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.0",
     "react-native-svg": "^15.11.1",
     "react-native-svg-transformer": "^1.5.0"
   },
