--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "install": "^0.13.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-mmkv": "^3.2.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.0",
     "react-native-svg": "^15.11.2",
